--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
       <section class="swiper-section">
         <div class="swiper mySwiper">
           <div class="swiper-wrapper">
-            <!-- <div class="swiper-slide"><img src="img1.jpg" /></div> -->
-          </div>
+              <div class="swiper-slide"><img src="images/IMG_7398.JPG" /></div>
+              <div class="swiper-slide"><img src="images/IMG_7398.JPG" /></div>
+              <div class="swiper-slide"><img src="images/IMG_7398.JPG" /></div>
+            </div>
         </div>
       </section>
 
       <section class="music-player">
-        <audio id="bg-music" src="song.mp3" preload="auto"></audio>
+        <audio id="bg-music" src="music/ฝากใจ - INK WARUNTORN [Official MV].mp4" preload="auto"></audio>
         <div class="music-controls">
           <button id="play-btn">▶️</button>
           <span id="music-title">ชื่อเพลง</span>
@@ -36,7 +38,7 @@
 
       <section class="message">
         <ul>
-          <li>พิมพ์ข้อความอวยพรจากใจคุณที่นี่...</li>
+          <li>สุขสันต์วันเกิดน้าาเทออ เค้าขอให้เทอมีความสุขมากๆๆขึ้นๆเลื่อยเลยนะให้เขาเติบโตไปได้ดีและขอให้เค้าได้อยู่กับเทอนานแล้วเราก้รักกันมากขึ้นเลื่อยใส่ใจกันอยู่แคร์กันและกันแบบนี้ไปเลื่อยๆจนแก่เลยนะะ</li>
           <li>จะยาวกี่บรรทัดก็ได้</li>
         </ul>
       </section>
