--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
     <div id="root">
@@ -47,17 +48,20 @@
           </div>
         </section>
 
-        <section id="secret-content" class="hidden">
+        <section id="secret-content">
           <h4>ข้อความลับ 💌</h4>
           <p>ใส่ได้เมื่อ OTP ถูกต้อง</p>
         </section>
 
-      <section class="music-player" id="secret-content">
-        <audio id="bg-music" src="music/music1.mp4" preload="auto"></audio>
+      <section class="music-player">
+        <!-- Elfsight Audio Player | Untitled Audio Player -->
+        <script src="https://static.elfsight.com/platform/platform.js" async></script>
+        <div class="elfsight-app-3ba46733-d031-443f-913b-347d4f7aa71b" data-elfsight-app-lazy></div>
+        <!-- <audio id="bg-music" src="music/music1.mp4" preload="auto"></audio>
         <div class="music-controls">
           <button id="play-btn">▶️</button>
           <span id="music-title">ฝากใจ</span>
-        </div>
+        </div> -->
       </section>
 
       <section class="message" id="secret-content">
