--- a/index.html
+++ b/index.html
@@ -52,17 +52,19 @@
           <h4>ข้อความลับ 💌</h4>
           <p>ใส่ได้เมื่อ OTP ถูกต้อง</p>
         </section>
-
-      <section class="music-player">
+        
+        <section class="music-player">
         <!-- Elfsight Audio Player | Untitled Audio Player -->
-        <script src="https://static.elfsight.com/platform/platform.js" async></script>
-        <div class="elfsight-app-3ba46733-d031-443f-913b-347d4f7aa71b" data-elfsight-app-lazy></div>
-        <!-- <audio id="bg-music" src="music/music1.mp4" preload="auto"></audio>
+          <script src="https://static.elfsight.com/platform/platform.js" async></script>
+          <div class="elfsight-app-3ba46733-d031-443f-913b-347d4f7aa71b" data-elfsight-app-lazy></div>
+        </section> 
+      <!-- <section class="music-player">
+        <audio id="bg-music" src="music/music1.mp4" preload="auto"></audio>
         <div class="music-controls">
           <button id="play-btn">▶️</button>
           <span id="music-title">ฝากใจ</span>
-        </div> -->
-      </section>
+        </div>
+      </section> -->
 
       <section class="message" id="secret-content">
         <ul>
