--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
 
         <section id="secret-content">
           <h4>ข้อความลับ 💌</h4>
-          <p>ใส่ได้เมื่อ OTP ถูกต้อง</p>
+          <p>OTP ถูกต้อง ขอให้เพลิดเพลินกับช่วงเวลาแสนวิเศษนี้น้ะะะ ❤️ </p>
+          <section class="message">
+            <ul>
+              <li>สุขสันต์วันเกิดน้าาเทออ เค้าขอให้เทอมีความสุขมากๆๆขึ้นๆเลื่อยเลยนะให้เขาเติบโตไปได้ดีและขอให้เค้าได้อยู่กับเทอนานแล้วเราก้รักกันมากขึ้นเลื่อยใส่ใจกันอยู่แคร์กันและกันแบบนี้ไปเลื่อยๆจนแก่เลยนะะ</li>
+            </ul>
+          </section>
         </section>
         
         <section class="music-player">
@@ -58,22 +63,13 @@
           <script src="https://static.elfsight.com/platform/platform.js" async></script>
           <div class="elfsight-app-3ba46733-d031-443f-913b-347d4f7aa71b" data-elfsight-app-lazy></div>
         </section> 
-      <!-- <section class="music-player">
+      <!-- <section class="music-player"> //music player
         <audio id="bg-music" src="music/music1.mp4" preload="auto"></audio>
         <div class="music-controls">
           <button id="play-btn">▶️</button>
           <span id="music-title">ฝากใจ</span>
         </div>
       </section> -->
-
-      <section class="message" id="secret-content">
-        <ul>
-          <li>สุขสันต์วันเกิดน้าาเทออ เค้าขอให้เทอมีความสุขมากๆๆขึ้นๆเลื่อยเลยนะให้เขาเติบโตไปได้ดีและขอให้เค้าได้อยู่กับเทอนานแล้วเราก้รักกันมากขึ้นเลื่อยใส่ใจกันอยู่แคร์กันและกันแบบนี้ไปเลื่อยๆจนแก่เลยนะะ</li>
-          <li>จะยาวกี่บรรทัดก็ได้</li>
-        </ul>
-      </section>
-
-
 
       <footer>
         <p>สร้างด้วยใจ 💖 โดยคุณหมูอ้วนที่รักเทออ;;</p>
