--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
           <h3>Memories Zone 📸</h3>
           <p>กรอกรหัส OTP 6 หลักเพื่อปลดล็อกข้อความลับ</p>
           <div class="otp-inputs">
-            <input maxlength="1" />
-            <input maxlength="1" />
-            <input maxlength="1" />
-            <input maxlength="1" />
-            <input maxlength="1" />
-            <input maxlength="1" />
+            <input type="text" inputmode="numeric" maxlength="1" />
+            <input type="text" inputmode="numeric" maxlength="1" />
+            <input type="text" inputmode="numeric" maxlength="1" />
+            <input type="text" inputmode="numeric" maxlength="1" />
+            <input type="text" inputmode="numeric" maxlength="1" />
+            <input type="text" inputmode="numeric" maxlength="1" />
           </div>
         </section>
 
