--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <h3>Memories Zone 📸</h3>
           <p>กรอกรหัส OTP 6 หลักเพื่อปลดล็อกข้อความลับ</p>
           <div class="otp-inputs">
-            <input type="text" inputmode="numeric" maxlength="1" />
+            <input type="tel" inputmode="numeric" pattern="[0-9]*" maxlength="1" />
             <input type="text" inputmode="numeric" maxlength="1" />
             <input type="text" inputmode="numeric" maxlength="1" />
             <input type="text" inputmode="numeric" maxlength="1" />
