--- a/index.html
+++ b/index.html
@@ -50,14 +50,12 @@
         </section>
 
         <section id="secret-content">
-          <h4>ข้อความลับ 💌</h4>
-          <p>OTP ถูกต้อง</p>
-          <p>ขอให้เพลิดเพลินกับช่วงเวลาแสนวิเศษนี้น้ะะะ ❤️</p>
+          <h3>ข้อความลับ 💌</h3>
           <section class="message">
+            <h2>ถึงคนที่รักที่สุดในโลก</h2>
             <ul>
               <li>สุขสันต์วันเกิดน้าาเทออ เค้าขอให้เทอมีความสุขมากๆๆขึ้นๆเลื่อยเลยนะให้เขาเติบโตไปได้ดีและขอให้เค้าได้อยู่กับเทอนานแล้วเราก้รักกันมากขึ้นเลื่อยใส่ใจกันอยู่แคร์กันและกันแบบนี้ไปเลื่อยๆจนแก่เลยนะะ</li>
             </ul>
-
           </section>
         </section>
         
