--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Love Birthday</title>
+    <title>Birthday my love</title>
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Itim&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Itim&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Modak&family=Rubik+Puddles&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root">
       <section class="header">
-        <h1 class="font-[&#39;Kanit&#39;]">Happy Birthday</h1>
-        <h2 id="receiver-name">Ployy ❤️</h2>
+        <h1 class="title">Happy Birthday</h1>
+        <h2 class="name">Ployy ❤️</h2>
       </section>
 
       
@@ -48,13 +52,13 @@
             <!-- <input type="text" inputmode="numeric" maxlength="1" /> -->
           </div>
         </section>
-
+        
         <section id="secret-content">
           <h3>ข้อความลับ 💌</h3>
           <section class="message">
             <h2>ถึงคนที่รักที่สุดในโลก</h2>
             <ul>
-              <li>สุขสันต์วันเกิดน้าาเทออ เค้าขอให้เทอมีความสุขมากๆๆขึ้นๆเลื่อยเลยนะให้เขาเติบโตไปได้ดีและขอให้เค้าได้อยู่กับเทอนานแล้วเราก้รักกันมากขึ้นเลื่อยใส่ใจกันอยู่แคร์กันและกันแบบนี้ไปเลื่อยๆจนแก่เลยนะะ</li>
+              <p>สุขสันต์วันเกิดน้าาเทออ เค้าขอให้เทอมีความสุขมากๆๆขึ้นๆเลื่อยเลยนะให้เขาเติบโตไปได้ดีและขอให้เค้าได้อยู่กับเทอนานแล้วเราก้รักกันมากขึ้นเลื่อยใส่ใจกันอยู่แคร์กันและกันแบบนี้ไปเลื่อยๆจนแก่เลยนะะ</p>
             </ul>
           </section>
         </section>
