--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
         <h1 class="title">Happy Birthday</h1>
         <h2 class="name">Ployy ❤️</h2>
       </section>
-
       
       <section class="floating-stars">
+        <div class="star"><img src="images/emoji1.png"></div>
+        <div class="cake"><img src="images/emoji2.png"></div>
+        <div class="heart"><img src="images/emoji3.png"></div>
         <!-- ใส่ภาพตกแต่ง (ดาว, หัวใจ ฯลฯ) -->
       </section>
       
@@ -57,7 +59,7 @@
           <h3>ข้อความลับ 💌</h3>
           <section class="message">
             <h2>ถึงคนที่รักที่สุดในโลก</h2>
-            <ul>
+            <ul class="message-list">
               <p>สุขสันต์วันเกิดน้าาเทออ เค้าขอให้เทอมีความสุขมากๆๆขึ้นๆเลื่อยเลยนะให้เขาเติบโตไปได้ดีและขอให้เค้าได้อยู่กับเทอนานแล้วเราก้รักกันมากขึ้นเลื่อยใส่ใจกันอยู่แคร์กันและกันแบบนี้ไปเลื่อยๆจนแก่เลยนะะ</p>
             </ul>
           </section>
