--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       </section>
       
       <section class="floating-stars">
-        <div class="star"><img src="images/emoji1.png"></div>
-        <div class="cake"><img src="images/emoji2.png"></div>
-        <div class="heart"><img src="images/emoji3.png"></div>
+        <img class="emoji1" src="images/emoji1.png">
+        <img class="emoji2" src="images/emoji2.png">
+        <img class="emoji3" src="images/emoji3.png">
         <!-- ใส่ภาพตกแต่ง (ดาว, หัวใจ ฯลฯ) -->
       </section>
       
