--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       </section>
       
       <section class="floating-stars">
-        <img class="emoji1" src="images/emoji1.png">
-        <img class="emoji2" src="images/emoji2.png">
-        <img class="emoji3" src="images/emoji3.png">
+        <img class="smile" src="images/emoji1.png">
+        <img class="cake" src="images/emoji2.png">
+        <img class="star" src="images/emoji3.png">
         <!-- ใส่ภาพตกแต่ง (ดาว, หัวใจ ฯลฯ) -->
       </section>
       
