--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
   <body>
     <div id="root">
       <section class="header">
-        <h1 class="title">Happy Birthday</h1>
-        <h2 class="name">Ployy ❤️</h2>
+        <h1 class="title">Happy <br>Birthday</h1>
+        <h2 class="name">Ployy❤️</h2>
+        <section class="floating-stars">
+          <img class="smile" src="images/emoji1.png">
+          <img class="cake" src="images/emoji2.png">
+          <img class="star" src="images/emoji3.png">
+          <!-- ใส่ภาพตกแต่ง (ดาว, หัวใจ ฯลฯ) -->
+        </section>
       </section>
       
-      <section class="floating-stars">
-        <img class="smile" src="images/emoji1.png">
-        <img class="cake" src="images/emoji2.png">
-        <img class="star" src="images/emoji3.png">
-        <!-- ใส่ภาพตกแต่ง (ดาว, หัวใจ ฯลฯ) -->
-      </section>
       
       <section class="swiper-section">
         <div class="swiper mySwiper">
