--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
   <body>
     <div id="root">
       <section class="header">
-        <h1 class="title">Happy <br>Birthday</h1>
-        <h2 class="name">Ployy❤️</h2>
+        <h1 class="title-top"><span>H</span><span>a</span><span>p</span><span>p</span><span>y</span></h1>
+        <h1 class="title-bottom"><span>B</span><span>i</span><span>r</span><span>t</span><span>h</span><span>d</span><span>a</span><span>y</span></h1>
+        <h2 class="name"><span>P</span><span>l</span><span>o</span><span>y</span><span>y</span><span>❤️</span></h2>
         <section class="floating-stars">
           <img class="smile" src="images/emoji1.png">
           <img class="cake" src="images/emoji2.png">
@@ -60,8 +61,10 @@
           <section class="message">
             <h2>ถึงคนที่รักที่สุดในโลก</h2>
             <ul class="message-list">
-              <p>สุขสันต์วันเกิดน้าาเทออ เค้าขอให้เทอมีความสุขมากๆๆขึ้นๆเลื่อยเลยนะให้เขาเติบโตไปได้ดีและขอให้เค้าได้อยู่กับเทอนานแล้วเราก้รักกันมากขึ้นเลื่อยใส่ใจกันอยู่แคร์กันและกันแบบนี้ไปเลื่อยๆจนแก่เลยนะะ</p>
+              <p>สุขสันต์วันเกิดน้าาเทออ เค้าขอให้เทอมีความสุขมากๆๆขึ้นเลื่อยเลยนะตูดดเค้าขอให้เส้นทางในอนาคตของที่รักของเค้าราบรื่นไม่มีอุปสรรคมาขวางและเป็นคนที่เก่งมากขึ้นเลื่อยๆเลยนะถึงเทอจะเก่งมากอยู่แล้วละน้ะะ! 
+                และขอให้ทุกๆการเติบโตของเทอไปในทิศที่ดีมากๆเลยนะและเค้าขอได้มีส่วนร่วมแล้วช่วยสนับสนุนกันผ่านมันไปในทุกๆเหตุการณ์อย่างดีเลยนะ และอีกนิดนึงขอให้เค้าได้อยู่กับเทอนานๆแล้วเราก้รักกันมากขึ้นเลื่อยๆใส่ใจกันอยู่แคร์กันและกันแบบนี้ไปเลื่อยๆจนแก่เลยนะะที่รัก</p>
             </ul>
+            <img class="card" src="images/emoji4.png">
           </section>
         </section>
         
