--- a/index.html
+++ b/index.html
@@ -66,8 +66,31 @@
             </ul>
             <img class="card" src="images/IMG_3048.JPG" alt="Card" />
           </section>
+          <h2>ข้างในเป็นอะไรน้าาา</h2>
           <section class="message">
-            <h2>ข้างในเป็นอะไรน้าาา</h2>
+            <div id="gift-box">
+            <div class="gift-box">
+              <input type="checkbox" id="click" hidden />
+              <div class="gift">
+                <label for="click" class="click"></label>
+                <div class="tape"></div>
+                <div class="shadow"></div>
+              </div>
+              <div class="gift-image"></div>
+              <div class="fireworks">
+                <span style="--i: 0; --x: -100; --y: -160"></span>
+                <span style="--i: 1; --x: 100; --y: -180"></span>
+                <span style="--i: 2; --x: 140; --y: -60"></span>
+                <span style="--i: 3; --x: -120; --y: -100"></span>
+                <span style="--i: 4; --x: 0; --y: -200"></span>
+                <span style="--i: 5; --x: -180; --y: -140"></span>
+                <span style="--i: 6; --x: 160; --y: -120"></span>
+                <span style="--i: 7; --x: -60; --y: -180"></span>
+                <span style="--i: 8; --x: 60; --y: -200"></span>
+                <span style="--i: 9; --x: 20; --y: -240"></span>
+              </div>
+            </div>
+          </div>
           </section>
         </section>
         
