--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
           <div class="swiper-wrapper">
             <!-- Slides -->
             <div class="swiper-slide"><img src="images/DSC02478.jpg" /></div>
+            <div class="swiper-slide"><img src="images/IMG_3048.JPG" /></div>
             <div class="swiper-slide"><img src="images/IMG_7398.JPG" /></div>
             <div class="swiper-slide"><img src="images/DSC02486.jpg" /></div>
             <div class="swiper-slide"><img src="images/DSC02513.jpg" /></div>
-            <div class="swiper-slide"><img src="images/IMG_3048.JPG" /></div>
-            <div class="swiper-slide"><img src="images/IMG_7010.JPG" /></div>
+            <div class="swiper-slide"><img src="images/LINE_ALBUM_💖 part2_250616_1.jpg" /></div>
           </div>
         </section>
         
@@ -56,7 +56,7 @@
           </div>
         </section>
         
-        <section id="secret-content">
+        <section class="message-secret" id="secret-content">
           <h3>ข้อความลับ 💌</h3>
           <section class="message">
             <h2>ถึงคนที่รักที่สุดในโลก💖</h2>
@@ -66,7 +66,7 @@
             </ul>
             <img class="card" src="images/IMG_3048.JPG" alt="Card" />
           </section>
-          <h2>ข้างในเป็นอะไรน้าาา</h2>
+          <h2 class="message-gift">ข้างในเป็นอะไรน้าาา</h2>
           <section class="message">
             <div id="gift-box">
             <div class="gift-box">
