--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
               <source src="images/CardHBD.mp4" type="video/mp4">
             </video>
             <ul class="message-list">
-              <p>สุขสันต์วันเกิดน้าาที่รักก เค้าขอให้เทอมีความสุขมากๆๆขึ้นเลื่อยๆเลยนะตูดดเค้าขอให้เส้นทางในอนาคตของที่รักของเค้าราบรื่นไม่มีอุปสรรคมาขวางและเป็นคนที่เก่งมากขึ้นเลื่อยๆเลยนะถึงเทอจะเก่งมากอยู่แล้วละน้ะะ! 
-                และขอให้ทุกๆการเติบโตของเทอไปในทิศที่ดีมากๆเลยนะและเค้าขอได้มีส่วนร่วมแล้วช่วยสนับสนุนกันผ่านมันไปในทุกๆเหตุการณ์อย่างดีเลยนะ และอีกนิดนึงขอให้เค้าได้อยู่กับเทอนานๆแล้วเราก้รักกันมากขึ้นเลื่อยๆใส่ใจกันอยู่แคร์กันและกันแบบนี้ไปเลื่อยๆจนแก่เลยนะะที่รัก</p>
+              <!-- <p>สุขสันต์วันเกิดน้าาที่รักก เค้าขอให้เทอมีความสุขมากๆๆขึ้นเลื่อยๆเลยนะตูดดเค้าขอให้เส้นทางในอนาคตของที่รักของเค้าราบรื่นไม่มีอุปสรรคมาขวางและเป็นคนที่เก่งมากขึ้นเลื่อยๆเลยนะถึงเทอจะเก่งมากอยู่แล้วละน้ะะ! 
+                และขอให้ทุกๆการเติบโตของเทอไปในทิศที่ดีมากๆเลยนะและเค้าขอได้มีส่วนร่วมแล้วช่วยสนับสนุนกันผ่านมันไปในทุกๆเหตุการณ์อย่างดีเลยนะ และอีกนิดนึงขอให้เค้าได้อยู่กับเทอนานๆแล้วเราก้รักกันมากขึ้นเลื่อยๆใส่ใจกันอยู่แคร์กันและกันแบบนี้ไปเลื่อยๆจนแก่เลยนะะที่รัก</p> -->
             </ul>
             <!-- <img class="card" src="images/CardHBD.mp4" alt="Card" /> -->
           </section>
